--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,10 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  cloud_firestore:
+  firebase_core: ^0.3.0
+  cloud_firestore:  ^0.9.0
+  geoflutterfire: ^2.0.2
+  location: ^1.4.1
   flutter:
     sdk: flutter
   google_maps_flutter: ^0.5.11
